# rb5-ros-wrapper

./: CMakeLists.txt  README.md  package.xml
action/: Motion.action
example_clients/: RB5_Following_Client (Incomplete).cpp  RB5_Jenga.cpp  RB5_Pick_And_Place.cpp
msg/: rx.msg
src/: RB5_Client.cpp  RB5_Client.h  lanpodo2ros.cpp  lanpodo2ros.h  lanros2podo.cpp  lanros2podo.h  main.cpp  update.cpp  wrapper.cpp
src/cobotAPI/: cobotAPI.pro  cobotAPI.pro.user.c9c6fc4  main.cpp
src/cobotAPI/rbCobot/: CobotController.h  RBCobot.h  TCPClient.h  Thread.h
